# ecomm-backend

./: .dockerignore  .gitignore  Dockerfile.chat  Dockerfile.django  pyproject.toml  schema.yml
chat/: auth.py  database.py  main.py  manager.py  models.py  pyproject.toml  routes.py
ecomm_backend/: .env.prod  cleanup_seed_data.py  db.sqlite3  populate_db.py
ecomm_backend/cart/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
ecomm_backend/cart/migrations/: 0001_initial.py  0002_initial.py
ecomm_backend/ecomm_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ecomm_backend/orders/: admin.py  models.py  serializers.py  views.py
ecomm_backend/orders/migrations/: 0001_initial.py  0002_initial.py
ecomm_backend/products/: filters.py  models.py  serializers.py  urls.py  views.py
ecomm_backend/products/management/commands/: fetch_product_images.py
ecomm_backend/products/migrations/: 0001_initial.py  0002_alter_product_categories_delete_productcategory.py
ecomm_backend/support/: models.py  serializers.py  urls.py  views.py
ecomm_backend/users/: models.py  pagination.py  serializers.py  signals.py  tasks.py  token_blacklist.py  views.py
ecomm_backend/users/migrations/: 0001_initial.py  0002_enforce_unique_not_null_email.py  0002_user_auth0_sub.py
ecomm_backend/users/services/: auth0.py
ecomm_backend/users/views/: __init__.py  auth.py  auth0.py  mixins.py  user.py
