[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "python-dotenv>=1.0.0",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-silk>=5.4.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "httpx>=0.28.1",
    "pyjwt[crypto]>=2.11.0",
    "pillow>=12.1.1",
    "pydot>=4.0.1",
    "redis>=5.0.0",
    "uuid6>=2025.0.1",
]

[tool.uv.workspace]
members = [
    "chat",
]
